--- a/Quizzler-iOS13/Quizzler-iOS13/View/Base.lproj/Main.storyboard
+++ b/Quizzler-iOS13/Quizzler-iOS13/View/Base.lproj/Main.storyboard
@@ -24,8 +24,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fal-oS-tEg">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0I-4v-LDb">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="52.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSI-li-mhO">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="618"/>
+                                        <rect key="frame" x="0.0" y="62.5" width="374" height="555.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -87,6 +93,7 @@
                         <outlet property="falseButton" destination="tbn-vQ-GyC" id="BMC-2n-Hi9"/>
                         <outlet property="progressBar" destination="TXm-qh-7Xg" id="xzH-Ey-Y9Q"/>
                         <outlet property="questionLabel" destination="rSI-li-mhO" id="zdr-Gp-F8C"/>
+                        <outlet property="scoreLabel" destination="V0I-4v-LDb" id="hTf-g5-Hcj"/>
                         <outlet property="trueButton" destination="oVw-Hl-IRe" id="3ZH-wt-Cnf"/>
                     </connections>
                 </viewController>
