--- a/BMI-Calculator-iOS13/BMI Calculator/Views/Base.lproj/Main.storyboard
+++ b/BMI-Calculator-iOS13/BMI Calculator/Views/Base.lproj/Main.storyboard
@@ -105,6 +105,9 @@
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="calculatePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8BO-ZK-omc"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -124,7 +127,9 @@
                     </view>
                     <connections>
                         <outlet property="heightLabel" destination="Xcz-1j-2c9" id="4LD-Kp-G0j"/>
+                        <outlet property="heightSlider" destination="Pky-qY-oVp" id="i8W-aA-ihU"/>
                         <outlet property="weightLabel" destination="LTF-aL-8qu" id="NYT-7U-yyV"/>
+                        <outlet property="weightSlider" destination="s2X-C5-Zcz" id="Y95-bh-4Hp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
